--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /* Write your CSS here! */
+body{
+    background-color: yellow
+  
+  }
+  h1 {
+     font-size: 36px;
+  }
+  .center {
+     text-align: center;
+  }
+  #list-color {
+     color: blueviolet;
+     
+  }
